[package]
name = "sp_queue"
version = "0.1.0"
authors = ["Peter Travers <traverspw@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0.107", features = ["derive"] }
log = "0.4"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

[dependencies.rocksdb]
version = "0.14.0"
default-features = false
features = ["lz4"]
