[package]
name = "spq_server"
version = "0.1.0"
authors = ["Peter Travers <traverspw@gmail.com>"]
edition = "2018"

[dependencies]
sp_queue = { path = "../queue" }
tonic = "0.3.1"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
tokio-timer = "0.2"

[build-dependencies]
tonic-build = "0.3.1"
