[package]
name = "sp_storage"
version = "0.1.0"
authors = ["Pete Travers <traverspw@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
sp_error = { path = "../error" }
serde = { version = "1.0.107", features = ["derive"] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }

[dependencies.rocksdb]
version = "0.14.0"
default-features = false
features = ["lz4"]
